# Capability-Cartography-Layer-3

./: .gitignore  README.md  SESSION_CHECKPOINT.md  TAO_ASSESSMENT.md  pyproject.toml
capability_cartography/: __init__.py  adapters.py  agent_integration.py  boundary.py  causal_atlas.py  causal_registry.py  causal_visualization.py  compressibility.py  datasets.py  demo.py  descriptors.py  estimator_sweep.py  execution.py  failure_atlas.py  iv_estimators.py  metrics.py  middle_regime.py  notebook_runner.py  orchestration.py  paper_registry.py  provenance.py  runner.py  schemas.py  storage.py  surfaces.py  sweeps.py  transfer_diagnostics.py  validation.py  verdict_policy.py  visualization.py
tests/: test_capability_cartography.py
